recursive-parser/src/main/Grammar
FP-DECLARATION -> FUNCTION FP-DECLARATION
FP-DECLARATION -> PROCEDURE FP-DECLARATION
FP-DECLARATION -> _

WORD: [a-zA-Z][a-zA-Z0-9]*

FUNCTION -> SIGNATURE : WORD ;

PROCEDURE -> SIGNATURE ;

SIGNATURE -> WORD ( DECLARATIONS )

DECLARATIONS -> DECLARATION DECLARATIONS_SUFFIX
DECLARATIONS -> _

DECLARATION -> VAR-DECLARATION
DECLARATION -> SIMPLE-DECLARATION

VAR-DECLARATION -> VAR SIMPLE-DECLARATION

SIMPLE-DECLARATION -> NAMES : WORD

NAMES -> WORD NAMES_SUFFIX

NAMES_SUFFIX -> , NAMES
NAMES_SUFFIX -> _

DECLARATIONS_SUFFIX -> ; DECLARATIONS
DECLARATIONS_SUFFIX -> _
